--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,60 @@
       </div>
     </article>
     <br />
+    <br />
+    <br />
     <div class="title"><h1>THE MOST POPULAR</h1>
+    </div>
+    <div class="gallery" >
+        <div class="item" data-category="action">
+            <img 
+            src="/images/2YqZ6IyFk7menirwziJvfoVvSOh.jpg"
+            alt="Movie 1"
+            height="350">
+            <h3 class="movie-title">Godzilla y Kong: El nuevo imperio</h3>
+            <br />
+            <p class="movie-description"> El todopoderoso Kong y al temible Godzilla luchan contra una colosal
+                 amenaza desconocida escondida dentro de nuestro mundo</p>
+            <br/>
+            <button class="button">favorite</button>
+        </div>
+        <div class="item" data-category="comedy">
+            <img src="/images/aQnbNiadeGzGSjWLaXyeNxpAUIx.webp" alt="Movie 4" height="350" class="movie-img">
+            <h3 class="movie-title">Intensamente 2</h3>
+            <br />
+            <p class="movie-description">Riley, ahora adolescente, enfrenta una reforma en la Central de sus emociones. Alegría, Tristeza, Ira, Miedo y Asco deben adaptarse a la llegada de 
+                nuevas emociones: Ansiedad, Vergüenza, Envidia y Ennui.</p>
+            <br/>
+            <button class="button">favorite</button>
+        </div>
+        <div class="item" data-category="comedy">
+            <img src="/images/sDoXpaKZmrzCSJH63zZvQQ9A7VK.webp" alt="Movie 4" height="350" class="movie-img">
+            <h3 class="movie-title">Robot salvaje</h3>
+            <br />
+            <p class="movie-description">Un robot - ROZZUM unidad 7134, "Roz" para abreviar - naufraga en una isla deshabitada y debe aprender a adaptarse al duro entorno, estableciendo gradualmente 
+                relaciones con los animales de la isla y convirtiéndose en la madre adoptiva de un ganso huérfano.</p>
+            <br/>
+            <button class="button">favorite</button>
+        </div>
+        <div class="item" data-category="comedy">
+            <img src="/images/ynqqkPy8RiawjGtWFIsF9pmYZtJ.webp" alt="Movie 4" height="350" class="movie-img">
+            <h3 class="movie-title">Transformens uno</h3>
+            <br />
+            <p class="movie-description">La esperada historia del origen de cómo los personajes más icónicos del universo Transformers, Orion Pax y D-16, pasaron de ser hermanos de armas a 
+                convertirse en los enemigos jurados Optimus Prime y Megatron.
+            <br/>
+            <button class="button">favorite</button>
+            </p>
+        </div>
+        <div class="item" data-category="comedy">
+            <img src="/images/diEeiB2DmZZadHISkg24RO2n0rT.jpg" alt="Movie 4" height="350" class="movie-img">
+            <h3 class="movie-title">¡Patos!</h3>
+            <br />
+            <p class="movie-description">Después de que una familia de patos migratorios aterriza en su estanque con emocionantes historias de lugares remotos, 
+                la familia Mallard embarca en un viaje familiar, atravezando la ciudad de Nueva York, con destino a la tropical Jamaica.</p>
+            <br/>
+            <button class="button">favorite</button>
+        </div>
     </div>
     <footer>
         <p><address>Movies2Wacth</address></p>
