--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -37,7 +37,8 @@
                 <img 
                 src="/images/2YqZ6IyFk7menirwziJvfoVvSOh.jpg"
                 alt="Movie 1"
-                height="350">
+                height="350"
+                class="movie-img">
                 <h3 class="movie-title">Godzilla y Kong: El nuevo imperio</h3>
                 <br />
                 <p class="movie-description"> El todopoderoso Kong y al temible Godzilla luchan contra una colosal
@@ -48,7 +49,8 @@
             <div class="item" data-category="romantic">
                 <img src="/images/4c3IdUFnS8qd3qrMol1b3Rq5MqF.webp" 
                 alt="Movie 2"
-                height="350">
+                height="350"
+                class="movie-img">
                 <h3 class="movie-title">Romper el círculo</h3>
                 <br />
                 <p class="movie-description">Una mujer atraviesa las tumultuosas etapas de una relación abusiva. Tras mudarse a la ciudad de Boston
