--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,17 +7,17 @@
         <meta name="description" content="Movie website" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/png" href="images\reel.png" />
-        <link rel="stylesheet" href="/CSS/grid.css" />
-        <link rel="stylesheet" href="/CSS/movie.css" />
-        <link rel="stylesheet" href="/CSS/Modal.css" />
+        <link rel="stylesheet" href="../CSS/grid.css" />
+        <link rel="stylesheet" href="../CSS/movie.css" />
+        <link rel="stylesheet" href="../CSS/Modal.css" />
       </head>
       <body>
         <header id="mainheader">
-            <img src="/images/Movies2watch-logo.png" height="75" alt="logo" />
+            <img src="../images/Movies2watch-logo.png" height="75" alt="logo" />
           </header>
           <nav>
             <ul>
-              <li><a href="/pages/index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="#">Movie gallery</a></li>
             </ul>
           </nav>
