--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <meta name="description" content="Movie website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="images\reel.png" />
-    <link rel="stylesheet" href="../CSS/grid.css" />
-    <link rel="stylesheet" href="../CSS/movie.css" />
+    <link rel="stylesheet" href="CSS/grid.css" />
+    <link rel="stylesheet" href="CSS/movie.css" />
   </head>
   <body>
     <header id="mainheader">
-      <img src="../images/Movies2watch-logo.png" height="75" alt="logo" />
+      <img src="images/Movies2watch-logo.png" height="75" alt="logo" />
     </header>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="../pages/gallery.html">Movie gallery</a></li>
+        <li><a href="pages/gallery.html">Movie gallery</a></li>
       </ul>
     </nav>
     <article>
-      <div><img src="../images/cine.jpg" alt="cine" /></div>
+      <div><img src="images/cine.jpg" alt="cine" /></div>
       <div class="content">
         <h1 class="hello">Welcome to Movies2watch</h1>
       </div>
@@ -42,7 +42,7 @@
     <div class="gallery" >
         <div class="item" data-category="action">
             <img 
-            src="../images/2YqZ6IyFk7menirwziJvfoVvSOh.jpg"
+            src="images/2YqZ6IyFk7menirwziJvfoVvSOh.jpg"
             alt="Movie 1"
             height="350">
             <h3 class="movie-title">Godzilla y Kong: El nuevo imperio</h3>
@@ -53,7 +53,7 @@
             <button class="button">favorite</button>
         </div>
         <div class="item" data-category="comedy">
-            <img src="../images/aQnbNiadeGzGSjWLaXyeNxpAUIx.webp" alt="Movie 4" height="350" class="movie-img">
+            <img src="images/aQnbNiadeGzGSjWLaXyeNxpAUIx.webp" alt="Movie 4" height="350" class="movie-img">
             <h3 class="movie-title">Intensamente 2</h3>
             <br />
             <p class="movie-description">Riley, ahora adolescente, enfrenta una reforma en la Central de sus emociones. Alegría, Tristeza, Ira, Miedo y Asco deben adaptarse a la llegada de 
@@ -62,7 +62,7 @@
             <button class="button">favorite</button>
         </div>
         <div class="item" data-category="comedy">
-            <img src="../images/sDoXpaKZmrzCSJH63zZvQQ9A7VK.webp" alt="Movie 4" height="350" class="movie-img">
+            <img src="images/sDoXpaKZmrzCSJH63zZvQQ9A7VK.webp" alt="Movie 4" height="350" class="movie-img">
             <h3 class="movie-title">Robot salvaje</h3>
             <br />
             <p class="movie-description">Un robot - ROZZUM unidad 7134, "Roz" para abreviar - naufraga en una isla deshabitada y debe aprender a adaptarse al duro entorno, estableciendo gradualmente 
@@ -71,7 +71,7 @@
             <button class="button">favorite</button>
         </div>
         <div class="item" data-category="comedy">
-            <img src="/images/ynqqkPy8RiawjGtWFIsF9pmYZtJ.webp" alt="Movie 4" height="350" class="movie-img">
+            <img src="images/ynqqkPy8RiawjGtWFIsF9pmYZtJ.webp" alt="Movie 4" height="350" class="movie-img">
             <h3 class="movie-title">Transformens uno</h3>
             <br />
             <p class="movie-description">La esperada historia del origen de cómo los personajes más icónicos del universo Transformers, Orion Pax y D-16, pasaron de ser hermanos de armas a 
@@ -81,7 +81,7 @@
             </p>
         </div>
         <div class="item" data-category="comedy">
-            <img src="/images/diEeiB2DmZZadHISkg24RO2n0rT.jpg" alt="Movie 4" height="350" class="movie-img">
+            <img src="images/diEeiB2DmZZadHISkg24RO2n0rT.jpg" alt="Movie 4" height="350" class="movie-img">
             <h3 class="movie-title">¡Patos!</h3>
             <br />
             <p class="movie-description">Después de que una familia de patos migratorios aterriza en su estanque con emocionantes historias de lugares remotos, 
