--- a/index.html
+++ b/index.html
@@ -94,5 +94,7 @@
         <p><address>Movies2Wacth</address></p>
         <small>&copy; Movies2Wacth - All rights reserved</small>
     </footer>
+    <script src="JS/button.js"></script>
+    <script src="JS/modal.js"></script>
   </body>
 </html>
