--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,17 +7,17 @@
         <meta name="description" content="Movie website" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/png" href="images\reel.png" />
-        <link rel="stylesheet" href="../CSS/grid.css" />
-        <link rel="stylesheet" href="../CSS/movie.css" />
-        <link rel="stylesheet" href="../CSS/Modal.css" />
+        <link rel="stylesheet" href="CSS/grid.css" />
+        <link rel="stylesheet" href="CSS/movie.css" />
+        <link rel="stylesheet" href="CSS/Modal.css" />
       </head>
       <body>
         <header id="mainheader">
-            <img src="../images/Movies2watch-logo.png" height="75" alt="logo" />
+            <img src="images/Movies2watch-logo.png" height="75" alt="logo" />
           </header>
           <nav>
             <ul>
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="#">Movie gallery</a></li>
             </ul>
           </nav>
@@ -35,7 +35,7 @@
           <div class="gallery">
             <div class="item" data-category="action">
                 <img 
-                src="/images/2YqZ6IyFk7menirwziJvfoVvSOh.jpg"
+                src="images/2YqZ6IyFk7menirwziJvfoVvSOh.jpg"
                 alt="Movie 1"
                 height="350"
                 class="movie-img">
@@ -47,7 +47,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="romantic">
-                <img src="/images/4c3IdUFnS8qd3qrMol1b3Rq5MqF.webp" 
+                <img src="images/4c3IdUFnS8qd3qrMol1b3Rq5MqF.webp" 
                 alt="Movie 2"
                 height="350"
                 class="movie-img">
@@ -59,7 +59,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="action">
-                <img src="/images/atEmHkVFTSGRYt2PeCiziQqbZnI.webp" alt="Movie 3" height="350" class="movie-img">
+                <img src="images/atEmHkVFTSGRYt2PeCiziQqbZnI.webp" alt="Movie 3" height="350" class="movie-img">
                 <h3 class="movie-title">Sharknado</h3>
                 <br />
                 <p class="movie-description">Un huracán azota Los Ángeles y provoca que tiburones devoradores de hombres sean atrapados en tornados 
@@ -68,7 +68,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="romantic">
-                <img src="/images/7pFsAaJmiOppVHcldBzg8JKBHwe.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/7pFsAaJmiOppVHcldBzg8JKBHwe.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">La la Land</h3>
                 <br />
                 <p class="movie-description"> Mia, una aspirante a actriz y  Sebastian, un músico de jazz,se enfrentan a decisiones que comienzan a
@@ -77,7 +77,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="romantic">
-                <img src="/images/9ejTG3RYW3psH0cVhFmkVtTzdJx.jpg" alt="Movie 4" height="350" class="movie-img"> 
+                <img src="images/9ejTG3RYW3psH0cVhFmkVtTzdJx.jpg" alt="Movie 4" height="350" class="movie-img"> 
                 <h3 class="movie-title">La  bella y la bestia</h3>
                 <br />
                 <p class="movie-description">Una adaptación de acción real de la versión de Disney del cuento clásico de un príncipe maldito y una hermosa joven que lo ayuda a romper el hechizo.</p>
@@ -85,7 +85,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="comedy">
-                <img src="/images/aQnbNiadeGzGSjWLaXyeNxpAUIx.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/aQnbNiadeGzGSjWLaXyeNxpAUIx.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Intensamente 2</h3>
                 <br />
                 <p class="movie-description">Riley, ahora adolescente, enfrenta una reforma en la Central de sus emociones. Alegría, Tristeza, Ira, Miedo y Asco deben adaptarse a la llegada de 
@@ -94,7 +94,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="drama">
-                <img src="/images/b0MxU37dNmMwKtoPVYPKOZSIrIn.jpg" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/b0MxU37dNmMwKtoPVYPKOZSIrIn.jpg" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">el Rey León</h3>
                 <br />
                 <p class="movie-description">El príncipe león Simba y su padre son el blanco de su amargado tío, que quiere ascender al trono.</p>
@@ -102,7 +102,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="romantic">
-                <img src="/images/c1vHz6Sl8U2GhV88ev6xOVZgBGz.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/c1vHz6Sl8U2GhV88ev6xOVZgBGz.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">El autentico caballero</h3>
                 <br />
                 <p class="movie-description">Un encantador acompañante ve cómo su vida se complica cuando empieza a enamorarse y debe descubrir lo que en verdad necesita y desea.</p>
@@ -110,7 +110,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="drama">
-                <img src="/images/d2kXnywmFkhy8gcKCo7nHsmxXnE.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/d2kXnywmFkhy8gcKCo7nHsmxXnE.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Hackiko</h3>
                 <br />
                 <p class="movie-description">La trágica y real historia de Hachikō, un perro Akita que fue leal a su amo, el profesor Ueno, incluso después de su muerte.</p>
@@ -118,7 +118,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="romantic">
-                <img src="/images/d79DeKDCgFOM23O8Dr6MELZVooY.jpg" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/d79DeKDCgFOM23O8Dr6MELZVooY.jpg" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Elementos</h3>
                 <br />
                 <p class="movie-description">En una ciudad en la que conviven el fuego, el agua, la tierra y el aire, una joven llena de fuego y un tipo que fluye descubrirán lo mucho que tienen en común.</p>
@@ -126,7 +126,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="comedy">
-                <img src="/images/diEeiB2DmZZadHISkg24RO2n0rT.jpg" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/diEeiB2DmZZadHISkg24RO2n0rT.jpg" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">¡Patos!</h3>
                 <br />
                 <p class="movie-description">Después de que una familia de patos migratorios aterriza en su estanque con emocionantes historias de lugares remotos, 
@@ -135,7 +135,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="action">
-                <img src="/images/hJhjEpSlKGOIuaZg6sPJB9I75RV.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/hJhjEpSlKGOIuaZg6sPJB9I75RV.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">2012</h3>
                 <br />
                 <p class="movie-description">El geólogo Adrian Helmsley, descubre de que el núcleo de la Tierra se está calentando. Teme que la corteza se vuelva inestable, coincidiendo con las predicciones mayas del fin del mundo.
@@ -144,7 +144,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="action">
-                <img src="/images/s1yqzdCyeNIsEaLtn68e4VVPtgf.jpg" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/s1yqzdCyeNIsEaLtn68e4VVPtgf.jpg" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">La venganza del dragón</h3>
                 <br />
                 <p class="movie-description">Sam es un boxeador profesional que ha reconstruido una vida sencilla en una isla de Tailandia,pero pronto es chantajeado por un mafioso local para llevar a cabo una 
@@ -153,7 +153,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="comedy">
-                <img src="/images/sDoXpaKZmrzCSJH63zZvQQ9A7VK.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/sDoXpaKZmrzCSJH63zZvQQ9A7VK.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Robot salvaje</h3>
                 <br />
                 <p class="movie-description">Un robot - ROZZUM unidad 7134, "Roz" para abreviar - naufraga en una isla deshabitada y debe aprender a adaptarse al duro entorno, estableciendo gradualmente 
@@ -162,7 +162,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="romantic">
-                <img src="/images/tMMYwxrPwVPrxz3DqXs8DnVIOx0.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/tMMYwxrPwVPrxz3DqXs8DnVIOx0.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Joker: el mundo es un escenario</h3>
                 <br />
                 <p class="movie-description">El fracasado comediante Arthur Fleck conoce al amor de su vida, Harley Quinn, mientras está encarcelado en el Hospital Estatal de Arkham. </p>
@@ -170,7 +170,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="romantic">
-                <img src="/images/VMOt5scbGmBKDvkfHjZN6Ki54i.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/VMOt5scbGmBKDvkfHjZN6Ki54i.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Titanic</h3>
                 <br />
                 <p class="movie-description">El romance florece entre Jack Dawson y Rose DeWitt Bukater en el esplendoroso transatlántico RMS Titanic.
@@ -179,7 +179,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="action">
-                <img src="/images/xCHmhHeO7aOCMlzcNukGH6Q7EiD.webp" alt="Movie 4" height="350" class="movie-img"> 
+                <img src="images/xCHmhHeO7aOCMlzcNukGH6Q7EiD.webp" alt="Movie 4" height="350" class="movie-img"> 
                 <h3 class="movie-title">Duna: Parte dos</h3>
                 <br />
                 <p class="movie-description">Sigue la mítica jornada de Paul Atreides mientras se une con Chani y los Fremen en su camino hacia la venganza contra los conspiradores que destruyeron a su familia. </p>
@@ -187,7 +187,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="comedy">
-                <img src="/images/ynqqkPy8RiawjGtWFIsF9pmYZtJ.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/ynqqkPy8RiawjGtWFIsF9pmYZtJ.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Transformens uno</h3>
                 <br />
                 <p class="movie-description">La esperada historia del origen de cómo los personajes más icónicos del universo Transformers, Orion Pax y D-16, pasaron de ser hermanos de armas a 
@@ -197,7 +197,7 @@
                 </p>
             </div>
             <div class="item" data-category="horror">
-                <img src="/images/z5ZF5FHNErAle3Kq8kv8eQCC3aR.webp" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/z5ZF5FHNErAle3Kq8kv8eQCC3aR.webp" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">El Monstruo de la vieja Seúl</h3>
                 <br />
                 <p class="movie-description">En la primavera de 1945, una época lúgubre y siniestra, un hombre y una mujer luchan por sobrevivir mientras se enfrentan a monstruos nacidos de la avaricia humana.</p>
@@ -205,7 +205,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="action">
-                <img src="/images/ksBQ4oHQDdJwND8H90ay8CbMihU.jpg" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/ksBQ4oHQDdJwND8H90ay8CbMihU.jpg" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Vengadores: Infinity war</h3>
                 <br />
                 <p class="movie-description">Los Vengadores y sus aliados deben estar dispuestos a sacrificarlo todo para intentar derrotar al poderoso Thanos antes de que su ataque de devastación y ruina ponga fin al universo.</p>
@@ -213,7 +213,7 @@
                 <button class="button">favorite</button>
             </div>
             <div class="item" data-category="horror" >
-                <img src="/images/mehUdQGRSbxTTOgT3zCctg5uj3F.jpg" alt="Movie 4" height="350" class="movie-img">
+                <img src="images/mehUdQGRSbxTTOgT3zCctg5uj3F.jpg" alt="Movie 4" height="350" class="movie-img">
                 <h3 class="movie-title">Carnada</h3>
                 <br />
                 <p class="movie-description">Sigue a un grupo de cinco amigas que deben luchar por sus vidas en aguas abiertas después de que una boda de ensueño se transforme en una pesadilla.</p>
@@ -231,9 +231,9 @@
         </div>
     
          
-    <script src="/JS/clasificar.js"></script>
-    <script src="/JS/button.js"></script>
-    <script src="/JS/modal.js"></script>
+    <script src="JS/clasificar.js"></script>
+    <script src="JS/button.js"></script>
+    <script src="JS/modal.js"></script>
 
       </body>
       <footer>
