--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -69,7 +69,7 @@
             </div>
             <div class="item" data-category="romantic">
                 <img src="images/7pFsAaJmiOppVHcldBzg8JKBHwe.webp" alt="Movie 4" height="350" class="movie-img">
-                <h3 class="movie-title">La la Land</h3>
+                <h3 class="movie-title">La la land</h3>
                 <br />
                 <p class="movie-description"> Mia, una aspirante a actriz y  Sebastian, un músico de jazz,se enfrentan a decisiones que comienzan a
                      deshilachar el frágil tejido de su historia de amor.</p>
