--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Movies2watch" />
         <meta name="description" content="Movie website" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/png" href="images\reel.png" />
+        <link rel="icon" type="image/png" href="images/reel.png" />
         <link rel="stylesheet" href="CSS/grid.css" />
         <link rel="stylesheet" href="CSS/movie.css" />
         <link rel="stylesheet" href="CSS/Modal.css" />
