--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="pages/gallery.html">Movie gallery</a></li>
+        <li><a href="gallery.html">Movie gallery</a></li>
       </ul>
     </nav>
     <article>
