--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
                 <br/>
                 <button class="button">favorite</button>
             </div>
-            <div class="item" data-category="action">
+            <div class="item" data-category="horror">
                 <img src="images/atEmHkVFTSGRYt2PeCiziQqbZnI.webp" alt="Movie 3" height="350" class="movie-img">
                 <h3 class="movie-title">Sharknado</h3>
                 <br />
