--- a/gallery.html
+++ b/gallery.html
@@ -224,7 +224,7 @@
                 <div class="modal-content">
                   <span id="closeModal" class="close">&times;</span>
                   <h5 id="modalTitle"></h5>
-                  <img id="modalImage" src="" />
+                  <img id="modalImage" src="#" />
                   <p id="modalDescription"></p>
                 </div>
               </div>
